# automatic-tool-creator

./: .env.example  README.md  agent.py  daytona_client.py  main.py  prompts.py  pyproject.toml  sentry_client.py  work.py
frontend/: design.txt
frontend/.claude/: settings.local.json
frontend/app/: globals.css  layout.tsx  page.tsx
scripts/: create_sandboxes.py
